--- a/fase2/desingn.html
+++ b/fase2/desingn.html
@@ -119,7 +119,7 @@
     </p>
 </article>
 <h5>mi mokckup</h5>
-<img src=" img mockup jpg" alt="">
+<img src=" img/mockup jpg" alt="">
 <article>
     <footer>
         mi pie de pagina
