--- a/fase2/desingn.html
+++ b/fase2/desingn.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <a href="fase2.desing.html"></a>
         <h1>estudiando hojas de estilo cascada css, frameworws css</h1>
     </header>
     <nav>
